--- a/COVID19DETECTOR/app/build.gradle
+++ b/COVID19DETECTOR/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+
 }
